[tool.poetry]
name = "venus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.85.0"
fastapi-utils = "^0.2.1"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"

[tool.poetry.scripts]
start = "venus.main:start"


[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
